--- a/GoogleScripts/forms.html
+++ b/GoogleScripts/forms.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Post to the PSY1113 Blog</title>
+    <title>Post to the VA226 Blog</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
