--- a/GoogleScripts/forms.html
+++ b/GoogleScripts/forms.html
@@ -41,7 +41,7 @@
   </head>
   <body>
   <div id="form-container" class="container">
-  <h2>Post to the PSY1113 Blog</h2>
+  <h2>Post to the VA226 Blog</h2>
   <p>Please note that all fields, including the featured image file, must be filled out before you can submit the blog post.</p>
   <form>
       <div id="forminner">
